engine/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__workspace_owner_credits_nudge_completion_feedback.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "rendered_cases.join(\"\\n---\\n\")"
---
• Workspace owner notified.

---
• Workspace owner was already notified recently.

---
• Could not notify your workspace owner. Please try again.
