engine/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__worktree_browser_actions.snap
---
source: tui/src/chatwidget/tests/worktree_picker_tests.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Worktree: Fix login form
  /repo/worktree


› 1. Resume owner thread
  2. Copy working directory
  3. Delete worktree

  enter select · esc back
